tests/fail/elaboration/non-exhaustive-patterns/let-expr.snap
stdout = ''
stderr = '''
error: non-exhaustive patterns in match expression
  ┌─ tests/fail/elaboration/non-exhaustive-patterns/let-expr.fathom:3:15
  │
3 │ let 1 : U32 = 2;
  │               ^ patterns not covered

'''
